Should make jacoco finally work with gitlab-ci